# petshoop-leo-

./: .flake8  README.md  db.sqlite3  manage.py  pyproject.toml  pytest.ini
github/workflows/: django.yml
petshoop/: settings.py  urls.py  wsgi.py
petshoop/base/: admin.py  urls.py  views.py
petshoop/base/migrations/: 0001_initial.py
petshoop/base/static/css/: style.css
petshoop/base/templates/base/: assinar.html  footer.html  home.html  plano.html
petshoop/base/tests/: tests_home.py
staticfiles/css/: style.css
